# newslet-rs

./: Cargo.toml  Dockerfile  README.md  init_db.sh  learnings.md  spec.yaml
configuration/: local.yaml  production.yaml
src/: configurations.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: email_client.rs  health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
